# computer-vision-cats-and-dogs-v3-students

./: Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
config/: settings.py
docker/: .env.example  Dockerfile.app  Dockerfile.md  docker-compose.md  docker-compose.yml
monitoring/grafana/provisioning/alerting/: cv-alerts.yml
monitoring/grafana/provisioning/dashboards/: cv_dashboard.json
src/api/: routes.py
src/database/: db_connector.py
src/monitoring/: prometheus_metrics.py
